Implement basic grid system

--- a/index.html
+++ b/index.html
@@ -22,5 +22,37 @@
                 <a href="#" class="btn btn--white btn--animated">Discover our Tours</a>
             </div>
         </header>
+        <main>
+            <section class="grid-test">
+                <div class="row">
+                    <div class="col-1-of-2">One of two</div>
+                    <div class="col-1-of-2">one of two</div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">one of three</div>
+                    <div class="col-1-of-3">one of three</div>
+                    <div class="col-1-of-3">one of three</div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">one of three</div>
+                    <div class="col-2-of-3">two of three</div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-4">one of four</div>
+                    <div class="col-1-of-4">one of four</div>
+                    <div class="col-1-of-4">one of four</div>
+                    <div class="col-1-of-4">one of four</div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-4">one of four</div>
+                    <div class="col-1-of-4">one of four</div>
+                    <div class="col-2-of-4">two of four</div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-4">one of four</div>
+                    <div class="col-3-of-4">three of four</div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
