Implement about section heading

--- a/index.html
+++ b/index.html
@@ -22,35 +22,49 @@
                 <a href="#" class="btn btn--white btn--animated">Discover our Tours</a>
             </div>
         </header>
+        <!-- <section class="grid-test">
+            <div class="row">
+                <div class="col-1-of-2">One of two</div>
+                <div class="col-1-of-2">one of two</div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">one of three</div>
+                <div class="col-1-of-3">one of three</div>
+                <div class="col-1-of-3">one of three</div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">one of three</div>
+                <div class="col-2-of-3">two of three</div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">one of four</div>
+                <div class="col-1-of-4">one of four</div>
+                <div class="col-1-of-4">one of four</div>
+                <div class="col-1-of-4">one of four</div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">one of four</div>
+                <div class="col-1-of-4">one of four</div>
+                <div class="col-2-of-4">two of four</div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-4">one of four</div>
+                <div class="col-3-of-4">three of four</div>
+            </div>
+        </section> -->
         <main>
-            <section class="grid-test">
-                <div class="row">
-                    <div class="col-1-of-2">One of two</div>
-                    <div class="col-1-of-2">one of two</div>
+            <section id="about" class="section-about">
+                <div class="u-center-text u-margin-bottom-8">
+                    <h2 class="heading-secondary">Exciting Tours For Adventurous People</h2>
                 </div>
                 <div class="row">
-                    <div class="col-1-of-3">one of three</div>
-                    <div class="col-1-of-3">one of three</div>
-                    <div class="col-1-of-3">one of three</div>
-                </div>
-                <div class="row">
-                    <div class="col-1-of-3">one of three</div>
-                    <div class="col-2-of-3">two of three</div>
-                </div>
-                <div class="row">
-                    <div class="col-1-of-4">one of four</div>
-                    <div class="col-1-of-4">one of four</div>
-                    <div class="col-1-of-4">one of four</div>
-                    <div class="col-1-of-4">one of four</div>
-                </div>
-                <div class="row">
-                    <div class="col-1-of-4">one of four</div>
-                    <div class="col-1-of-4">one of four</div>
-                    <div class="col-2-of-4">two of four</div>
-                </div>
-                <div class="row">
-                    <div class="col-1-of-4">one of four</div>
-                    <div class="col-3-of-4">three of four</div>
+                    <div class="col-1-of-2">
+                        <h3>Some other headline</h3>
+                        <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                    </div>
+                    <div class="col-1-of-2">
+                        <p>Some images</p>
+                    </div>
                 </div>
             </section>
         </main>
