Style the left hand side of the about block

--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
         </section> -->
         <main>
             <section id="about" class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">Exciting Tours For Adventurous People</h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-2">
-                        <h3>Some other headline</h3>
-                        <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p  class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ipsam eius, saepe odit officiis molestiae nobis quia, fugiat unde nihil corrupti ab voluptates recusandae facilis neque, iusto quasi libero! Nesciunt!</p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                        <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente necessitatibus corporis minima totam, aperiam officia ullam. Delectus repellat ducimus, nisi, modi laudantium libero vero minima quidem asperiores nihil perferendis consequatur.</p>
+                        <a href="#" title="Learn more" class="btn-text">Learn More &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         <p>Some images</p>
