Implement photos in the about section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
                         <a href="#" title="Learn more" class="btn-text">Learn More &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
-                        <p>Some images</p>
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="A stream at the bottom of a rock face, surrounded by trees." class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="A large, open space with a road vanishing into the distance and a bicyclist in the foreground." class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="A woman walking along a trail near the top of a hill." class="composition__photo composition__photo--p3">
+                        </div>
                     </div>
                 </div>
             </section>
