--- a/index.html
+++ b/index.html
@@ -114,26 +114,80 @@
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
-                                <h3 class="heading-tertiary">The Sea Explorer</h3>
+                                <div class="card__img card__img--1">&nbsp;</div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>Three day tour</li>
+                                        <li>Up to thirty people</li>
+                                        <li>Two tour guides</li>
+                                        <li>Sleep in cozy hotels</li>
+                                        <li>Difficulty: Easy</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="card__side card__side--back card__side--back-1">Back</div>
+                            <div class="card__side card__side--back card__side--back-1">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$297</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
                             <div class="card">
                                 <div class="card__side card__side--front">
-                                    <h3 class="heading-tertiary">The Sea Explorer</h3>
+                                    <div class="card__img card__img--2">&nbsp;</div>
+                                    <h4 class="card__heading"><span class="card__heading-span  card__heading-span--2">The Forest Hiker</span></h4>
+                                    <div class="card__details">
+                                        <ul>
+                                            <li>Seven day tour</li>
+                                            <li>Up to forty people</li>
+                                            <li>Six tour guides</li>
+                                            <li>Sleep in provided tents</li>
+                                            <li>Difficulty: medium</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="card__side card__side--back card__side--back-2">Back</div>
+                                <div class="card__side card__side--back card__side--back-2">
+                                    <div class="card__cta">
+                                        <div class="card__price-box">
+                                            <p class="card__price-only">Only</p>
+                                            <p class="card__price-value">$497</p>
+                                        </div>
+                                        <a href="#" class="btn btn--white">Book Now!</a>
+                                    </div>
+                                </div>
                             </div>
                     </div>
                     <div class="col-1-of-3">
-                            <div class="card">
-                                <div class="card__side card__side--front">
-                                    <h3 class="heading-tertiary">The Sea Explorer</h3>
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__img card__img--3">&nbsp;</div>
+                                <h4 class="card__heading"><span class="card__heading-span  card__heading-span--3">The Snow Adventurer</span></h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>Five day tour</li>
+                                        <li>Up to fifteen people</li>
+                                        <li>Three tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>DifficultyL hard</li>
+                                    </ul>
                                 </div>
-                                <div class="card__side card__side--back card__side--back-3">Back</div>
                             </div>
+                            <div class="card__side card__side--back card__side--back-3"><div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$897</p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book Now!</a>
+                            </div></div>
+                        </div>
                     </div>
                 </div>
             </section>
