Fix typo in index

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                         <li>Up to fifteen people</li>
                                         <li>Three tour guides</li>
                                         <li>Sleep in provided tents</li>
-                                        <li>DifficultyL hard</li>
+                                        <li>Difficulty: hard</li>
                                     </ul>
                                 </div>
                             </div>
